@@ -7,32 +7,32 @@
 #endif
 #if defined (DUMP)
 static const char sccsid[] USED =
-	"@(#)/usr/ucb/otfdump.sl	7.55 (gritter) 8/9/06";
+	"@(#)/usr/ucb/otfdump.sl	7.56 (gritter) 8/10/06";
 #elif defined (DPOST)
-static const char sccsid[] USED = "@(#)dpost.sl  7.55 (gritter) 8/9/06";
-const char creator[] = "Heirloom Documentation Tools - dpost 7.55 (gritter) 8/9/06";
+static const char sccsid[] USED = "@(#)dpost.sl  7.56 (gritter) 8/10/06";
+const char creator[] = "Heirloom Documentation Tools - dpost 7.56 (gritter) 8/10/06";
 #elif defined (NROFF)
-static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	7.55 (gritter) 8/9/06";
+static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	7.56 (gritter) 8/10/06";
 #else	/* !DUMP, !NROFF */
-static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	7.55 (gritter) 8/9/06";
+static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	7.56 (gritter) 8/10/06";
 #endif	/* !DUMP, !NROFF */
-const char revision[] = "7.55";
+const char revision[] = "7.56";
 /* SLIST */
 /*
-ext.h: * Sccsid @(#)ext.h	1.71 (gritter) 8/9/06
+ext.h: * Sccsid @(#)ext.h	1.72 (gritter) 8/10/06
 hytab.c: * Sccsid @(#)hytab.c	1.4 (gritter) 8/16/05
-n1.c: * Sccsid @(#)n1.c	1.104 (gritter) 8/9/06
+n1.c: * Sccsid @(#)n1.c	1.106 (gritter) 8/10/06
 n2.c: * Sccsid @(#)n2.c	1.28 (gritter) 8/9/06
-n3.c: * Sccsid @(#)n3.c	1.131 (gritter) 8/9/06
-n4.c: * Sccsid @(#)n4.c	1.56 (gritter) 8/9/06
-n5.c: * Sccsid @(#)n5.c	1.74 (gritter) 8/9/06
-n7.c: * Sccsid @(#)n7.c	1.89 (gritter) 8/9/06
+n3.c: * Sccsid @(#)n3.c	1.132 (gritter) 8/10/06
+n4.c: * Sccsid @(#)n4.c	1.57 (gritter) 8/10/06
+n5.c: * Sccsid @(#)n5.c	1.76 (gritter) 8/10/06
+n7.c: * Sccsid @(#)n7.c	1.90 (gritter) 8/10/06
 n8.c: * Sccsid @(#)n8.c	1.33 (gritter) 8/6/06
 n9.c: * Sccsid @(#)n9.c	1.59 (gritter) 8/9/06
 ni.c: * Sccsid @(#)ni.c	1.36 (gritter) 8/9/06
 nii.c: * Sccsid @(#)nii.c	1.41 (gritter) 8/6/06
 suftab.c: * Sccsid @(#)suftab.c	1.4 (gritter) 8/16/05
-tdef.h: * Sccsid @(#)tdef.h	1.117 (gritter) 8/9/06
+tdef.h: * Sccsid @(#)tdef.h	1.118 (gritter) 8/10/06
 nroff.d/n10.c: * Sccsid @(#)n10.c	1.29 (gritter) 8/7/06
 nroff.d/n6.c: * Sccsid @(#)n6.c	1.45 (gritter) 8/9/06
 nroff.d/pt.h: *	Sccsid @(#)pt.h	1.40 (gritter) 7/29/06
@@ -46,7 +46,7 @@ troff.d/otf.c: * Sccsid @(#)otf.c	1.57 (gritter) 8/8/06
 troff.d/otfdump.c: * Sccsid @(#)otfdump.c	1.15 (gritter) 3/16/06
 troff.d/pt.h: * Sccsid @(#)pt.h	1.51 (gritter) 8/6/06
 troff.d/t10.c: * Sccsid @(#)t10.c	1.83 (gritter) 8/6/06
-troff.d/t6.c: * Sccsid @(#)t6.c	1.164 (gritter) 8/9/06
+troff.d/t6.c: * Sccsid @(#)t6.c	1.165 (gritter) 8/10/06
 troff.d/troff.h: * Sccsid @(#)troff.h	1.25 (gritter) 7/11/06
 troff.d/unimap.c: * Sccsid @(#)unimap.c	1.13 (gritter) 2/16/06
 troff.d/unimap.h: * Sccsid @(#)unimap.h	1.2 (gritter) 12/22/05
